--- a/app/src/main/res/layout/fragment_panel_right.xml
+++ b/app/src/main/res/layout/fragment_panel_right.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -8,7 +9,9 @@
         android:id="@+id/control_left"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="76dp"
+        tools:layout_editor_absoluteY="-108dp">
 
 
         <Button
@@ -19,7 +22,13 @@
             android:text="@string/connect"
             android:textColor="@color/btn_connect_red" />
 
-
+        <TextView
+            android:id="@+id/msgReceived"
+            android:layout_width="401dp"
+            android:layout_height="378dp"
+            android:text="Received Text"
+            android:translationX="20sp"
+            android:translationY="30sp" />
 
 
     </LinearLayout>
