--- a/app/src/main/res/layout/fragment_panel_center.xml
+++ b/app/src/main/res/layout/fragment_panel_center.xml
@@ -103,16 +103,16 @@
 
     <Button
         android:id="@+id/planPath"
-        android:layout_width="109dp"
-        android:layout_height="43dp"
-        android:text="Plan path"
+        android:layout_width="49dp"
+        android:layout_height="39dp"
+        android:text="P1"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.98"
+        app:layout_constraintHorizontal_bias="0.894"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.145" />
+        app:layout_constraintVertical_bias="0.143" />
 
     <TextView
         android:id="@+id/robotStatus"
@@ -325,6 +325,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/planPath2"
+        android:layout_width="54dp"
+        android:layout_height="39dp"
+        android:text="P2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.982"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.143" />
 
     <!-- TODO: Update blank fragment layout -->
     <!--    <TextView-->
