--- a/app/src/main/res/layout/item_bluetooth_device.xml
+++ b/app/src/main/res/layout/item_bluetooth_device.xml
@@ -28,15 +28,19 @@
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:text="Device Name:"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/white"
+                    android:textSize="12dp"
+                    android:textStyle="bold|italic" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Device Address:"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/white"
+                    android:textSize="12dp"
+                    android:textStyle="bold|italic" />
             </LinearLayout>
 
             <LinearLayout
@@ -49,26 +53,34 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:text="DEVICE_NAME"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/white"
+                    android:textSize="12dp"
+                    android:textStyle="italic" />
 
                 <TextView
                     android:id="@+id/tv_device_address"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:text="DEVICE_ADDR"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/white"
+                    android:textSize="12dp"
+                    android:textStyle="italic" />
             </LinearLayout>
 
         </LinearLayout>
 
         <Button
             android:id="@+id/btn_pair_device"
-            android:layout_width="0dp"
-            android:layout_height="48dp"
+            android:layout_width="150dp"
+            android:layout_height="37dp"
             android:layout_marginTop="8dp"
             android:layout_marginRight="64dp"
+            android:background="@drawable/bt_pair"
             android:padding="8dp"
             android:text="Connect"
+            android:textColor="@color/white"
+            android:textSize="11sp"
+            android:translationY="-5dp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
