--- a/app/src/main/res/layout/item_scan_bluetooth_device.xml
+++ b/app/src/main/res/layout/item_scan_bluetooth_device.xml
@@ -30,13 +30,17 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Device Name:"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/white"
+                    android:textSize="12dp"
+                    android:textStyle="italic" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Device Address:"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/white"
+                    android:textSize="12dp"
+                    android:textStyle="italic" />
             </LinearLayout>
 
             <LinearLayout
@@ -49,14 +53,18 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:text="DEVICE_NAME"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/white"
+                    android:textSize="12dp"
+                    android:textStyle="italic" />
 
                 <TextView
                     android:id="@+id/tv_device_address"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:text="DEVICE_ADDR"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/white"
+                    android:textSize="12dp"
+                    android:textStyle="italic" />
             </LinearLayout>
 
         </LinearLayout>
@@ -67,8 +75,10 @@
             android:layout_height="48dp"
             android:layout_marginTop="4dp"
             android:layout_marginRight="64dp"
-            android:padding="8dp"
+            android:padding="11sp"
+            android:textColor="@color/white"
             android:text="Pair"
+            android:background="@drawable/bt_pair"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
